# CameraCalibration

./: .gitignore  CMakeLists.txt  README.md
examples/simpleUndistort/: Makefile  SimpleUndistort.cpp  main
examples/simpleUndistortCPP/: SimpleUndistort.cpp  config.json
examples/simpleUndistortPython/: camcalib.py  undistort.py
include/: camcalib.hpp
src/: camcalib.pc.in  camcalib.py  main.cpp
src/camcalibpython/: setup.py
src/camcalibpython/camcalib/: __init__.py  calib.py  camcalib.py
